<?xml version="1.0"?>
<package format="3">
  <name>lucia_pressure</name>
  <version>0.0.1</version>
  <description>Simple ROS 2 Humble node to request and receive pressure data over serial (topics only)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export/>
</package>